--- a/LucentDb.Validator/LucentDb.Validator.csproj
+++ b/LucentDb.Validator/LucentDb.Validator.csproj
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -51,6 +55,9 @@
     <Compile Include="DbConnectionFactory.cs" />
     <Compile Include="Comparer\ITestValueComparer.cs" />
     <Compile Include="IDbConnectionFactory.cs" />
+    <Compile Include="Model\ValidationProject.cs" />
+    <Compile Include="Model\ValidationResponse.cs" />
+    <Compile Include="Model\ValidationTest.cs" />
     <Compile Include="ScriptResolver\FileSystemScriptResolver.cs" />
     <Compile Include="ScriptResolver\HttpScriptResolver.cs" />
     <Compile Include="ScriptResolver\IScriptResolver.cs" />
@@ -79,12 +86,15 @@
       <Name>LucentDb.Domain.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\LucentDb.Domain\LucentDb.Domain.csproj">
-      <Project>{35F11A61-843B-4E97-B992-BF22FB50F1EA}</Project>
+      <Project>{35f11a61-843b-4e97-b992-bf22fb50f1ea}</Project>
       <Name>LucentDb.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Validators\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
