--- a/LucentDb.Domain/LucentDb.Domain.csproj
+++ b/LucentDb.Domain/LucentDb.Domain.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,6 +39,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +51,9 @@
     <Compile Include="DbRepositoryContext.cs" />
     <Compile Include="IRepositoryContext.cs" />
     <Compile Include="Factories\ProjectFactory.cs" />
+    <Compile Include="Model\ValidationProject.cs" />
+    <Compile Include="Model\ValidationTest.cs" />
+    <Compile Include="Model\ValidationTestGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\TestCondition.cs" />
     <Compile Include="Factories\TestFactory.cs" />
@@ -75,8 +81,19 @@
       <Project>{4adcf3cb-049f-4be2-b421-7875dc51301b}</Project>
       <Name>LucentDb.Domain.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LucentDb.Validator\LucentDb.Validator.csproj">
+      <Project>{4a33135e-3a6a-4a9a-9e20-8d8613bf4785}</Project>
+      <Name>LucentDb.Validator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
