--- a/LucentDb.Data.SQLClient/LucentDb.Data.SqlClient.vbproj
+++ b/LucentDb.Data.SQLClient/LucentDb.Data.SqlClient.vbproj
@@ -56,6 +56,7 @@
     <Compile Include="SqlDbExpectedResultCommandProvider.vb" />
     <Compile Include="SqlDbExpectedResultTypeCommandProvider.vb" />
     <Compile Include="SqlDbProjectCommandProvider.vb" />
+    <Compile Include="SqlDbProjectDetailsViewCommandProvider.vb" />
     <Compile Include="SqlDbRunHistoryCommandProvider.vb" />
     <Compile Include="SqlDbRunHistoryDetailCommandProvider.vb" />
     <Compile Include="SqlDbTestCommandProvider.vb" />
